Fix search bar on small screens

--- a/styles/search.css
+++ b/styles/search.css
@@ -46,11 +46,6 @@ input[type=submit] {
     background-color: #e9e9e9;
 }
 
-/*when navigating through the items using the arrow keys:*/
-.autocomplete-active {
-    background-color: DodgerBlue !important;
-    color: #ffffff;
-}
 .autocomplete {
     display: inline-block;
     margin-left:10%;
@@ -75,3 +70,15 @@ input[type=submit] {
 body {
     padding: 0%;
 }
+
+#myInput{
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+@media only screen and (max-width: 600px) {
+    #myInput {
+        width:75%;
+        margin-left: 15%;
+    }
+  }
